--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
   output-dir: docs
 
 website:
-  title: "Dr Daniel Kapitan | Data-centric Architecture | Applied AI | Coaching & Public Speaking"
+  title: "Dr Daniel Kapitan | Data-centric AI | Applied AI | Coaching & Public Speaking"
   site-url: https://masteringdata.ai
   search:
     location: sidebar
@@ -28,15 +28,8 @@ website:
     collapse-level: 1
     background: light
     contents:
-      - section: "Services"
-        contents:
-          - text: "Applied AI"
-            href: src/services/ai-concepting.qmd
-          - text: "Data-centric AI"
-            href: src/services/data-centric-ai.qmd
-          - text: "Coaching & public speaking"
-            href: src/services/coaching.qmd
       - section: "Projects"
+        href: src/projects/index.qmd
         contents:
           - src/projects/project-1.qmd
           - src/projects/project-2.qmd
