--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: "Dr Daniel Kapitan | Data-centric AI | Applied AI | Coaching & Mentoring | Masterclasses & Public Speaking"
-  site-url: https://masteringdata.ai
+  site-url: https://kapitan.net
   search:
     location: sidebar
     type: overlay
@@ -26,32 +26,30 @@ website:
         href: https://github.com/dkapitan
         text: "GitHub profile"
       - icon: rss
-        href: https://masteringdata.ai/blog/index.xml
+        href: https://kapitan.net/blog/index.xml
         text: "RSS feed"
     contents:
       - section: "Projects"
         href: projects/index.qmd
         contents:
           - text: "PharmAccess"
-            href: projects/pharmaccess.qmd"
+            href: projects/pharmaccess.qmd
           - text: "MyTomorrows"
-            href: projects/mytomorrows.qmd"
+            href: projects/mytomorrows.qmd
           - text: "Roetz Life"
-            href: projects/roetz-life.qmd"
+            href: projects/roetz-life.qmd
           - text: "Blue Radix"
-            href: projects/blue-radix.qmd"
+            href: projects/blue-radix.qmd
           - text: "Amphia Sensium"
-            href: projects/amphia-sensium.qmd"
+            href: projects/amphia.qmd
           - text: "HAS Green Academy"
-            href: projects/has.qmd"
+            href: projects/has.qmd
           - text: "Sensire"
-            href: projects/sensire.qmd"
+            href: projects/sensire.qmd
       - text: "Blog"
         href: blog/index.qmd
       - text: "Book an appointment"
         href: appointment/index.qmd
-      - text: "Company details"
-        href: contact.qmd
   page-footer:
     left: |
       <br>
@@ -75,12 +73,13 @@ website:
 format:
   html:
     page-layout: full
+    date-format: "MMM YYYY"
     theme:
       light:
         - flatly
         - mozilla.scss
     css: styles.css
-    toc: true
+    toc: false
 
 execute: 
   freeze: auto
