--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,6 +59,7 @@ website:
 
     center: |
       <br>
+      __Postal address__<br>
       DWMM Holding B.V.<br>
       Marie Baronstraat 15<br>
       3056 AA  ROTTERDAM
