--- a/_quarto.yml
+++ b/_quarto.yml
@@ -59,7 +59,7 @@ website:
 
     center: |
       <br>
-      __Postal address__<br>
+      __Postal address:__<br>
       DWMM Holding B.V.<br>
       Marie Baronstraat 15<br>
       3056 AA  ROTTERDAM
