--- a/_quarto.yml
+++ b/_quarto.yml
@@ -66,7 +66,7 @@ website:
     
     right: |
       <br>
-      Chamber of Commerce (KvK): 52920259<br>
+      __Chamber of Commerce (KvK):__ 52920259<br>
       __RSIN:__ 850665851<br>
       __IBAN:__ NL47 KNAB 0259 5268 27<br>
       __Terms & Conditions__ in [Dutch](/resources/230901-algemene-voorwaarden-%40kapitan.pdf)<br>
