--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,6 +16,7 @@ jobs:
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
+      - run: quarto add --no-prompt data-intuitive/quarto-d2
 
       - name: Install Python and Dependencies
         uses: actions/setup-python@v4
